# Agentic_task_manager

./: .env  .gitignore  README.md  crewai_flow.html  pyproject.toml  requirements.txt
src/task_manager/: .env  .gitignore  __init__.py  app.py  main.py
